<resources>
    <string name="app_name">Music Player</string>
    <string name="app_label_caps">MUSIC PLAYER</string>

    <!-- Main Activity -->
    <string name="header_title">My Library</string>
    <string name="header_subtitle">Select a track to start listening</string>
    <string name="playlist_title">My Playlist</string>
    <string name="song_count">%d songs</string>

    <!-- Manage Song Activity -->
    <string name="now_playing">Now Playing</string>
    <string name="song_title_placeholder">Song Title</string>
    <string name="artist_placeholder">Unknown Artist</string>
    <string name="status_ready">Ready to play</string>
    <string name="status_playing">Now Playing</string>
    <string name="status_paused">Paused</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_buffering">Loading...</string>
    <string name="status_ready_play">Ready</string>
    <string name="status_finished">Finished</string>
    <string name="time_zero">0:00</string>

    <!-- Navigation -->
    <string name="menu_now_playing">Now Playing</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_music">My Music</string>
    <string name="menu_favorites">Favorites</string>

    <!-- Favorites -->
    <string name="favorites_label">FAVORITES</string>
    <string name="favorites_title">Favorite Songs</string>
    <string name="favorites_subtitle">Your default favorites plus songs added from My Music</string>
    <string name="favorites_section_title">Saved Picks</string>

    <!-- Profile -->
    <string name="profile_name">April Lhen Paniza</string>
    <string name="profile_course_label">Course</string>
    <string name="profile_course_value">BS Information Technology</string>
    <string name="profile_section_label">Section</string>
    <string name="profile_section_value">Section A</string>
    <string name="profile_hobbies_label">Hobbies</string>
    <string name="profile_hobbies_value">Listening to music, coding, reading, and watching movies</string>
    <string name="profile_hobby_music">Listening to music</string>
    <string name="profile_hobby_coding">Coding</string>
    <string name="profile_hobby_reading">Reading</string>
    <string name="profile_hobby_movies">Watching movies</string>
    <string name="profile_image_description">Profile picture</string>

    <!-- Button descriptions -->
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="album_art_description">Album Art</string>
    <string name="play_icon_description">Play song</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="song_added_to_favorites">%1$s added to Favorites</string>
    <string name="song_removed_from_favorites">%1$s removed from Favorites</string>
</resources>
